sensord (0.6.8) unstable; urgency=low

  [Timo Rongas]
  * Fixes: NB#164312 - sensord is being linked against old version of its own libraries (already installed in scratchbox)

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Thu, 15 Apr 2010 08:09:40 +0300

sensord (0.6.7) unstable; urgency=low

  [Matias Muhonen]
  * Added a new power management test 'sensordriverpoll-test'

  [Timo Rongas]
  * LGPL 2.1 license disclaimer added to files
  * Author tags added to files
  * Removed extra source folders

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Wed, 14 Apr 2010 12:05:01 +0300

sensord (0.6.6) unstable; urgency=low

  [Timo Rongas]
  * Implements: SWP#MaSSW-1568

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Wed, 07 Apr 2010 14:50:12 +0300

sensord (0.6.5) unstable; urgency=low

  [Timo Rongas]
  * Fixes: NB#162512 - Compass does not give even nearly correct values anymore

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Fri, 26 Mar 2010 14:47:53 +0200

sensord (0.6.4) unstable; urgency=low

  [Timo Rongas]
  * Fixes: NB#161335 - lis3lv02d does not release VAUX1 regulator when not needed
  * Fixes: NB#160447 - Sensord is unusable for "user"
  * Fixes: NB#161699 - With QmALS, QmSensor::stop() blocks for a while, and right after it, ALS does not work

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 16 Mar 2010 16:11:22 +0200

sensord (0.6.3) unstable; urgency=low

  [Tapio Rantala]
  * Fixed als and orientation tests for context framework

  [Matias Muhonen]
  * Fixed als and orientation tests for context framework

  [Üstün Ergenoglu]
  * Fixes: NB#160447 - Sensord is unusable for "user"

  [Timo Rongas]
  * Implements: SWP#MaSSW-1259
  * Fixes: NB#159184 - The ipolldevd is causing very high wakeups which prevents the device to go in idle mode.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Fri, 05 Mar 2010 12:25:41 +0200

sensord (0.6.2) unstable; urgency=low

  [Timo Rongas]
  * Implements: SWP#MaSSW-1399, SWP#MaSSW-1398
